[tool.poetry]
name = "tuiorg"
version = "0.1.0"
description = ""
authors = ["kdm-python <kyle.marden@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.89.1"
loguru = "^0.7.3"
pytest = "^8.3.4"
icecream = "^2.1.3"
rich = "^13.9.4"
sqlmodel = "^0.0.22"
pydantic = "^2.10.3"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
